<resources>
    <string name="app_name">pokeapi</string>
    <string name="title">ポケモンシルエットクイズ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_generation">世代選択画面へ</string>
    <string name="string">TODO</string>
    <string name="No1_151">No1-151</string>
    <string name="No152_251">No152-251</string>
    <string name="No251_386">No251-386</string>
    <string name="No387_493">No387-493</string>
    <string name="No494_649">No494-649</string>
    <string name="No650_721">No650-721</string>
    <string name="No722_905">No722-905</string>
    <string name="one">%1$s</string>
    <string name="two">%1$s</string>
    <string name="three">%1$s</string>
    <string name="four">%1$s</string>
    <string name="todo">TODO</string>
    <string name="tv_count">第一問</string>
    <string name="PokemonName">poke</string>
    <string name="m_count">%d問目</string>
    <string name="home">ホームに戻る</string>
    <string name="result">%1$s</string>
</resources>